# domain/product/response/get_all_products_response.go
@@ -13,7 +13,9 @@ type ProductInfo struct {
 	Url  string `json:"url"`
 }
 
+// swagger:response GetAllProductsResponse
 type GetAllProductsResponse struct {
+	// in: body
 	ProductInfos []ProductInfo `json:"products"`
 }
 
